ompi/mpi/f03/mpi.f03


integer(C_INT) function &
MPI_Graph_neighbors(comm, rank, maxneighbors, neighbors, ierr) &
  BIND(C, name="MPI_Graph_neighbors")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: rank
  integer(INT_C), value, intent(in) :: maxneighbors
  integer(INT_C), dimension(*), value, intent(out) :: neighbors
end function MPI_Graph_neighbors

end interface MPI_Graph_neighbors


interface MPI_Graph_neighbors_count

integer(C_INT) function &
MPI_Graph_neighbors_count(comm, rank, nneighbors, ierr) &
  BIND(C, name="MPI_Graph_neighbors_count")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(in) :: rank
  integer(INT_C), value, intent(out) :: nneighbors
end function MPI_Graph_neighbors_count

end interface MPI_Graph_neighbors_count


interface MPI_Graphdims_get

integer(C_INT) function &
MPI_Graphdims_get(comm, nnodes, nedges, ierr) &
  BIND(C, name="MPI_Graphdims_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(INT_C), value, intent(out) :: nnodes
  integer(INT_C), value, intent(out) :: nedges
end function MPI_Graphdims_get

end interface MPI_Graphdims_get


interface MPI_Grequest_complete

integer(C_INT) function &
MPI_Grequest_complete(request, ierr) &
  BIND(C, name="MPI_Grequest_complete")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: request
end function MPI_Grequest_complete

end interface MPI_Grequest_complete


interface MPI_Grequest_start

integer(C_INT) function &
MPI_Grequest_start(query_fn, free_fn, cancel_fn, extra_state, request, ierr) &
  BIND(C, name="MPI_Grequest_start")
  use MPI_C_BINDING
  external :: query_fn
  external :: free_fn
  external :: cancel_fn
  integer(C_INT), value, intent(in) :: extra_state
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Grequest_start

end interface MPI_Grequest_start


interface MPI_Group_compare

integer(C_INT) function &
MPI_Group_compare(group1, group2, result, ierr) &
  BIND(C, name="MPI_Group_compare")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group1
  integer(MPI_HANDLE_KIND), value, intent(in) :: group2
  integer(INT_C), value, intent(out) :: result
end function MPI_Group_compare

end interface MPI_Group_compare


interface MPI_Group_difference

integer(C_INT) function &
MPI_Group_difference(group1, group2, newgroup, ierr) &
  BIND(C, name="MPI_Group_difference")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group1
  integer(MPI_HANDLE_KIND), value, intent(in) :: group2
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_difference

end interface MPI_Group_difference


interface MPI_Group_excl

integer(C_INT) function &
MPI_Group_excl(group, n, ranks, newgroup, ierr) &
  BIND(C, name="MPI_Group_excl")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(in) :: n
  integer(INT_C), dimension(*), value, intent(in) :: ranks
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_excl

end interface MPI_Group_excl


interface MPI_Group_free

integer(C_INT) function &
MPI_Group_free(group, ierr) &
  BIND(C, name="MPI_Group_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: group
end function MPI_Group_free

end interface MPI_Group_free


interface MPI_Group_incl

integer(C_INT) function &
MPI_Group_incl(group, n, ranks, newgroup, ierr) &
  BIND(C, name="MPI_Group_incl")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(in) :: n
  integer(INT_C), dimension(*), value, intent(in) :: ranks
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_incl

end interface MPI_Group_incl


interface MPI_Group_intersection

integer(C_INT) function &
MPI_Group_intersection(group1, group2, newgroup, ierr) &
  BIND(C, name="MPI_Group_intersection")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group1
  integer(MPI_HANDLE_KIND), value, intent(in) :: group2
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_intersection

end interface MPI_Group_intersection


interface MPI_Group_range_excl

integer(C_INT) function &
MPI_Group_range_excl(group, n, ranges, newgroup, ierr) &
  BIND(C, name="MPI_Group_range_excl")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(in) :: n
  integer(INT_C), dimension(3, *), value, intent(in) :: ranges
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_range_excl

end interface MPI_Group_range_excl


interface MPI_Group_range_incl

integer(C_INT) function &
MPI_Group_range_incl(group, n, ranges, newgroup, ierr) &
  BIND(C, name="MPI_Group_range_incl")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(in) :: n
  integer(INT_C), dimension(3, *), value, intent(in) :: ranges
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_range_incl

end interface MPI_Group_range_incl


interface MPI_Group_rank

integer(C_INT) function &
MPI_Group_rank(group, rank, ierr) &
  BIND(C, name="MPI_Group_rank")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(out) :: rank
end function MPI_Group_rank

end interface MPI_Group_rank


interface MPI_Group_size

integer(C_INT) function &
MPI_Group_size(group, size, ierr) &
  BIND(C, name="MPI_Group_size")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group
  integer(INT_C), value, intent(out) :: size
end function MPI_Group_size

end interface MPI_Group_size


interface MPI_Group_translate_ranks

integer(C_INT) function &
MPI_Group_translate_ranks(group1, n, ranks1, group2, ranks2, ierr) &
  BIND(C, name="MPI_Group_translate_ranks")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group1
  integer(INT_C), value, intent(in) :: n
  integer(INT_C), dimension(*), value, intent(in) :: ranks1
  integer(MPI_HANDLE_KIND), value, intent(in) :: group2
  integer(INT_C), dimension(*), value, intent(out) :: ranks2
end function MPI_Group_translate_ranks

end interface MPI_Group_translate_ranks


interface MPI_Group_union

integer(C_INT) function &
MPI_Group_union(group1, group2, newgroup, ierr) &
  BIND(C, name="MPI_Group_union")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: group1
  integer(MPI_HANDLE_KIND), value, intent(in) :: group2
  integer(MPI_HANDLE_KIND), value, intent(out) :: newgroup
end function MPI_Group_union

end interface MPI_Group_union


interface MPI_Ibsend

integer(C_INT) function &
MPI_Ibsend(buf, count, datatype, dest, tag, comm, request&
        , ierr) &
  BIND(C, name="MPI_Ibsend")
  use MPI_C_BINDING
  type(C_PTR), value, intent(in) :: buf
  integer(INT_C), value, intent(in) :: count
  integer(MPI_HANDLE_KIND), value, intent(in) :: datatype
  integer(INT_C), value, intent(in) :: dest
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(in) :: comm
  integer(MPI_HANDLE_KIND), value, intent(out) :: request
end function MPI_Ibsend

end interface MPI_Ibsend


interface MPI_Info_create

integer(C_INT) function &
MPI_Info_create(info, ierr) &
  BIND(C, name="MPI_Info_create")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(out) :: info
end function MPI_Info_create

end interface MPI_Info_create


interface MPI_Info_delete

integer(C_INT) function &
MPI_Info_delete(info, key, ierr) &
  BIND(C, name="MPI_Info_delete")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(out) :: info
  character(len=*), value, intent(in) :: key
end function MPI_Info_delete

end interface MPI_Info_delete


interface MPI_Info_dup

integer(C_INT) function &
MPI_Info_dup(info, newinfo, ierr) &
  BIND(C, name="MPI_Info_dup")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(MPI_HANDLE_KIND), value, intent(out) :: newinfo
end function MPI_Info_dup

end interface MPI_Info_dup


interface MPI_Info_free

integer(C_INT) function &
MPI_Info_free(info, ierr) &
  BIND(C, name="MPI_Info_free")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: info
end function MPI_Info_free

end interface MPI_Info_free


interface MPI_Info_get

integer(C_INT) function &
MPI_Info_get(info, key, valuelen, value, flag, ierr) &
  BIND(C, name="MPI_Info_get")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  character(len=*), value, intent(in) :: key
  integer(INT_C), value, intent(in) :: valuelen
  character(len=*), value, intent(out) :: value
  integer, value, intent(out) :: flag
end function MPI_Info_get

end interface MPI_Info_get


interface MPI_Info_get_nkeys

integer(C_INT) function &
MPI_Info_get_nkeys(info, nkeys, ierr) &
  BIND(C, name="MPI_Info_get_nkeys")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(INT_C), value, intent(out) :: nkeys
end function MPI_Info_get_nkeys

end interface MPI_Info_get_nkeys


interface MPI_Info_get_nthkey

integer(C_INT) function &
MPI_Info_get_nthkey(info, n, key, ierr) &
  BIND(C, name="MPI_Info_get_nthkey")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  integer(INT_C), value, intent(in) :: n
  character(len=*), value, intent(out) :: key
end function MPI_Info_get_nthkey

end interface MPI_Info_get_nthkey


interface MPI_Info_get_valuelen

integer(C_INT) function &
MPI_Info_get_valuelen(info, key, valuelen, flag, ierr) &
  BIND(C, name="MPI_Info_get_valuelen")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: info
  character(len=*), value, intent(in) :: key
  integer(INT_C), value, intent(out) :: valuelen
  integer, value, intent(out) :: flag
end function MPI_Info_get_valuelen

end interface MPI_Info_get_valuelen


interface MPI_Info_set

integer(C_INT) function &
MPI_Info_set(info, key, value, ierr) &
  BIND(C, name="MPI_Info_set")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(inout) :: info
  character(len=*), value, intent(in) :: key
  character(len=*), value, intent(in) :: value
end function MPI_Info_set

end interface MPI_Info_set


interface MPI_Init

integer(C_INT) function &
MPI_Init(ierr) &
  BIND(C, name="MPI_Init")
  use MPI_C_BINDING
end function MPI_Init

end interface MPI_Init


interface MPI_Init_thread

integer(C_INT) function &
MPI_Init_thread(required, provided, ierr) &
  BIND(C, name="MPI_Init_thread")
  use MPI_C_BINDING
  integer(INT_C), value, intent(in) :: required
  integer(INT_C), value, intent(out) :: provided
end function MPI_Init_thread

end interface MPI_Init_thread


interface MPI_Initialized

integer(C_INT) function &
MPI_Initialized(flag, ierr) &
  BIND(C, name="MPI_Initialized")
  use MPI_C_BINDING
  integer(INT_C), value, intent(out) :: flag
end function MPI_Initialized

end interface MPI_Initialized


interface MPI_Intercomm_create

integer(C_INT) function &
MPI_Intercomm_create(local_comm, local_leader, bridge_comm, remote_leader, tag, newintercomm, ierr) &
  BIND(C, name="MPI_Intercomm_create")
  use MPI_C_BINDING
  integer(MPI_HANDLE_KIND), value, intent(in) :: local_comm
  integer(INT_C), value, intent(in) :: local_leader
  integer(MPI_HANDLE_KIND), value, intent(in) :: bridge_comm
  integer(INT_C), value, intent(in) :: remote_leader
  integer(INT_C), value, intent(in) :: tag
  integer(MPI_HANDLE_KIND), value, intent(out) :: newintercomm
end function MPI_Intercomm_create

end interface MPI_Intercomm_create


interface MPI_Intercomm_merge
